--- a/src/pages/Dashboard/components/HeroSection/HeroSection.css
+++ b/src/pages/Dashboard/components/HeroSection/HeroSection.css
@@ -1,20 +1,19 @@
 .hero-section {
   width: 100%;
-  height: 580px;
-
+  height: 768px;
+background-image: url('../../../../assets/images/image1.png'); /* replace later */
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
 
 .hero-bg {
   width: 100%;
-  height: 100%;
-  background-image: url('../../../../assets/images/image1.png'); /* replace later */
-  background-size: cover;
-  background-position: center;
+  height: 768px;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 0 60px;
 }
 
 .hero-content {
@@ -23,7 +22,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 0 60px;
+  
 }
 
 .hero-text {
@@ -32,15 +31,21 @@
 }
 
 .hero-title {
-  font-size: 40px;
-  font-weight: bold;
-  margin-bottom: 20px;
+  font-size: 64px;
+  font-weight: 700;
+  margin-top: 0px;
+  margin-bottom: 24px;
+  color: #090909;
+  line-height: 1.22;
+
 }
 
 .hero-subtitle {
-  font-size: 18px;
-  margin-bottom: 30px;
-  line-height: 1.5;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 40px;
+  line-height: 32px;
+  margin-top: 0px;
 }
 
 .hero-buttons {
@@ -49,20 +54,19 @@
 }
 
 .hero-image {
-  max-width: 550px;
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 600px;
+  position: absolute; 
+  right: -140px;
+  bottom: 0px;
 }
 
 .hero-image img {
   width: 100%;
-  height: 500px;
+  height: 100%;
   display: block;
   object-fit: cover;
   position: relative;
-  border-radius: 8px;
-  top: 40px;
-  left: 70px;
 }
 
 @media (max-width: 768px) {
