--- a/src/pages/Dashboard/components/StepsSection/StepsSection.css
+++ b/src/pages/Dashboard/components/StepsSection/StepsSection.css
@@ -33,32 +33,37 @@
   }
   
   .step-card {
-    max-width: 300px;
+    width: 100%;
     text-align: center;
+    padding: 0px 20px;
   }
   
-  .icon-wrapper {
-    width: 80px;
-    height: 80px;
-    background-color: #FFFBE9;
+  .step-card .icon-wrapper {
+    width: 120px;
+    height: 120px;
+    background-color: rgb(253 208 35 / 10%);
     border-radius: 50%;
-    margin: 0 auto 20px;
+    margin: 0 auto 24px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 32px;
   }
   
-  .step-title {
-    font-size: 18px;
-    font-weight: 600;
-    color: #111;
+    .step-card .step-title {
+    font-size: 24px;
+    font-weight: 700;
+    color: #090909;
     margin-bottom: 12px;
+    line-height: 32px;
+    margin-top: 0px;
   }
   
-  .step-desc {
-    font-size: 15px;
-    color: #444;
-    line-height: 1.5;
+  .step-card  .step-desc {
+    font-size: 16px;
+    color: #090909;
+    line-height: 24px;
+    font-weight: 400;
+    margin-top: 0px;
   }
   
