--- a/src/layout/Footer.css
+++ b/src/layout/Footer.css
@@ -2,3 +2,60 @@ footer{
     background-color: #F5F5F5;
     padding: 80px 0px;
 }
+.media-flex{
+    gap:80px;
+    padding-bottom: 60px;
+    border-bottom: 1px solid #9E9E9E;
+    margin-bottom: 60px;
+}
+.media-flex h5{
+    color: #090909;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    margin: 0px;
+}
+.media-flex .media-link {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    line-height: 24px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #090909;
+}
+.media-flex .media-link:hover{
+    color: #461D7C;
+}
+.media-flex .media-link .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+}
+.footer-content p{
+    font-size: 14px;
+font-weight: 400;
+line-height: 20px;
+color:#616161;
+margin: 0px;
+}
+.footer-links ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 80px;
+}
+.footer-links ul li a{
+    color: #616161;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-decoration: none;
+}
+.footer-links ul li a:hover{
+    color: #461D7C;
+}
